--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     }
 
     .bg {
-        background-image: url('bgps315.jpeg');
+        background-image: url('bg.jpeg');
         height: 400px;
         background-position: center;
         background-repeat: no-repeat;
