--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
+<!--Lubna Khalid
+ -- HOME PAGE
+-->
 <html>
 
 <head>
-    <title>22K315|PS 315</title>
+    <title>22K315 | PS 315</title>
 </head>
 
 <body>
@@ -16,18 +19,174 @@
     </div>
     <div class="nav">
         <ul>
-            <li class="home"><a href="#">HOME</a></li>
-            <li class="about"><a class="active" href="#">ABOUT US </a></li>
-            <li class="event"><a href="#">EVENTS</a></li>
-            <li class="resources"><a href="#">RESOURCES</a></li>
-            <li class="contact"><a href="#">CONTACT US</a></li>
+            <li class="home"><a class="active" href="index.html">HOME</a></li>
+            <li class="about"><a href="about us.html">ABOUT US </a></li>
+            <li class="event"><a href="event.html">EVENTS</a></li>
+            <li class="resources"><a href="resources.html">RESOURCES</a></li>
+            <li class="contact"><a href="contact.html">CONTACT US</a></li>
         </ul>
     </div>
-    <div class="bg"></div>
+    <div class="parent">
+        <div class="bg"></div>
+
+        <div class="info">
+            <!--Information container-->
+            <h2> Our Vision </h2>
+            <img src="100day.jpeg" alt="100 days" style="width: 200px; height: 200px;">
+            <p> P.S 315 envisions a school as an educational community of collaborative learners where all members are
+                engaged in the educational process. Staff, parents, and students are all focused and working toward
+                getting our students college and career ready to meet the challenges of an ever changing technological
+                21st century society. Students will develop through an academically rigorous curriculum important
+                decision making, critical thinking, and technological skills enhanced through the fine arts and
+                fostering the ability to communicate effectively. All member of the school community will share
+                accountability for creating a positive, supportive, nurturing, and respectful environment, and for
+                achieving successful student outcomes through high quality standards driven instruction where the arts
+                are celebrated and diversity embraced.</p>
+        </div>
+        <div class="news">
+            <!--News Information container-->
+            <h2> News & Announcements </h2>
+            <p> --------------------------------------------------------------</p>
+            <h3> December 2021 Updates</h3>
+            <p>Principal's Message: Fall 2021</p>
+
+            <p>Leadership Program Update</p>
+
+            <p>Return to School 2021 DOE Website</p>
+
+            <p>Family Guides for Parents and Guardians with Disability</p>
+
+            <p>Multilingual Learners & English Language Learners</p>
+
+            <p> --------------------------------------------------------------</p>
+            <h3>Welcome Back</h3>
+            <p style="text-align: center;">Fall 2021 marks an important homecoming for our schools. On September 13, we
+                begin the journey to recovery by welcoming New York City students back to school communities and
+                classrooms where they can feel safe and well-cared for, and where they can learn and grow socially,
+                emotionally, and academically.
+
+                Our return to full-time, in-person learning starts with a safe and healthy learning environment for
+                every student and staff member and ensuring students have the tools and support they need to succeed.
+            </p>
+            <p> --------------------------------------------------------------</p>
+
+            <h3> Remote Learning Resources</h3>
+            <p>Welcome back Letter from Principal Quartana</p>
+
+            <p>COVID-19 DOE Updates</p>
+
+            <p>DOE Messages for Families</p>
+
+            <p>As the 2021-2022 school year begins to come to an end, please ensure you have access to login to your NYC
+                Schools Account (NYCSA). </p>
+
+            <p>Every student should make sure they have access to their nycstudents.net account. With any questions or
+                concerns please contact the main office.</p>
+
+            <p> --------------------------------------------------------------</p>
+        </div>
+
+    </div>
+    <!-- Slideshow container -->
+    <div class="slideshow-container">
+
+        <!-- images with number and caption text -->
+        <div class="mySlides fade">
+            <div class="numbertext">1 / 10</div>
+            <img src="img1.jpg" alt="pic1" style="width: 400px; height:500px;">
+            <div class="text">Image of kids</div>
+        </div>
+
+        <div class="mySlides fade">
+            <div class="numbertext">2 / 10</div>
+            <img src="img2.jpg" alt="pic4" style="width: 400px; height:500px;">
+            <div class="text">Image of kids</div>
+        </div>
+
+        <div class="mySlides fade">
+            <div class="numbertext">3 / 10</div>
+            <img src="img3.jpg" alt="pic3" style="width:400px;height:500px;">
+            <div class="text">Image of kids</div>
+        </div>
+        <div class="mySlides fade">
+            <div class="numbertext"> 4 / 10</div>
+            <img src="img4.jpg" alt="pic5" style="width:400px;height:500px;">
+            <div class="text"> Image of kids</div>
+        </div>
+        <div class="mySlides fade">
+            <div class="numbertext"> 5 / 10</div>
+            <img src="img5.jpg" alt="pic5" style="width:400px;height:500px;">
+            <div class="text"> Image of kids</div>
+        </div>
+        <div class="mySlides fade">
+            <div class="numbertext"> 6 / 10</div>
+            <img src="img6.jpg" alt="pic5" style="width:400px;height:500px;">
+            <div class="text"> Image of kids</div>
+        </div>
+        <div class="mySlides fade">
+            <div class="numbertext"> 7 / 10</div>
+            <img src="img7.jpg" alt="pic5" style="width:400px;height:500px;">
+            <div class="text"> Image of kids</div>
+        </div>
+        <div class="mySlides fade">
+            <div class="numbertext"> 8 / 10</div>
+            <img src="img8.jpg" alt="pic5" style="width:400px;height:500px;">
+            <div class="text"> Image of kids</div>
+        </div>
+        <div class="mySlides fade">
+            <div class="numbertext"> 9 / 10</div>
+            <img src="img9.jpeg" alt="pic5" style="width:400px;height:500px;">
+            <div class="text"> Image of kids</div>
+        </div>
+        <div class="mySlides fade">
+            <div class="numbertext"> 10 / 10</div>
+            <img src="img10.jpg" alt="pic5" style="width:400px;height:500px;">
+            <div class="text"> Image of kids</div>
+        </div>
+    </div>
 </body>
 
 </html>
 <style>
+    .news {
+        display: inline-block;
+        width: 400px;
+        height: 950px;
+        background-color: rgb(93, 136, 102);
+        position: absolute;
+        top: 410px;
+        left: 600px;
+        text-align: center;
+    }
+
+    .info {
+        display: inline-block;
+        width: 400px;
+        height: 950px;
+        background-color: rgb(212, 212, 212);
+        position: absolute;
+        top: 410px;
+        left: 100px;
+        text-align: center;
+    }
+
+    .info h2 {
+        color: rgb(63, 109, 84);
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        font-size: 24pt;
+        text-align: center;
+    }
+
+    .info p {
+        position: relative;
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 14pt;
+        left: 40px;
+        color: rgb(70, 62, 48);
+        inline-size: 300px;
+        text-align: center;
+    }
+
     .header h1 {
         margin: 0;
         text-align: center;
@@ -80,11 +239,12 @@
 
     .bg {
         background-image: url('bg.jpeg');
-        height: 400px;
+        height: 1800px;
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
         margin-bottom: -100px;
+        opacity: .7;
     }
 
     body {
@@ -112,13 +272,20 @@
         color: #fff;
         display: block;
         width: 150px;
-        transition: .3s background-color;
+        transition: .3s;
 
     }
 
     .nav a:hover {
         background-color: #3c4141;
     }
+
+    .nav a.active {
+        background-color: rgb(124, 148, 134);
+        color: #444;
+        cursor: default;
+    }
+
     @media screen and (min-width: 600px) {
         .nav li {
             width: 150px;
@@ -142,4 +309,72 @@
     li:last-child {
         border-right: none;
     }
+
+    * {
+        box-sizing: border-box
+    }
+
+    /* Slideshow container */
+    .slideshow-container {
+        max-width: 1000px;
+        position: absolute;
+        left: 30%;
+        top: 1400px;
+
+    }
+
+    /* Caption text */
+    .text {
+        color: #000000;
+        font-size: 15pt;
+        padding: 8px 12px;
+        position: relative;
+        bottom: 8px;
+        width: 100%;
+        text-align: center;
+    }
+
+    /* Fading animation */
+    .fade {
+        -webkit-animation-name: fade;
+        -webkit-animation-duration: 1.5s;
+        animation-name: fade;
+        animation-duration: 1.5s;
+    }
+
+    @-webkit-keyframes fade {
+        from {
+            opacity: .4
+        }
+
+        to {
+            opacity: 1
+        }
+    }
+
+    @keyframes fade {
+        from {
+            opacity: .4
+        }
+
+        to {
+            opacity: 1
+        }
+    }
 </style>
+<script>
+    var slideIndex = 0;
+    showSlides();
+
+    function showSlides() {
+        var i;
+        var slides = document.getElementsByClassName("mySlides");
+        for (i = 0; i < slides.length; i++) {
+            slides[i].style.display = "none";
+        }
+        slideIndex++;
+        if (slideIndex > slides.length) { slideIndex = 1 }
+        slides[slideIndex - 1].style.display = "block";
+        setTimeout(showSlides, 2000); // Change image every 2 seconds
+    }
+</script>
